| Summary: | ASTERISK-22817: ooh323 reload command doesn't send request for registreation to gk | ||
| Reporter: | sam (sam.gh) | Labels: | |
| Date Opened: | 2013-11-02 04:14:21 | Date Closed: | 2013-12-18 13:13:07.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Addons/chan_ooh323 |
| Versions: | 1.8.22.0 11.7.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) ooh323_module_reload.patch | |
| Description: | ooh323 asterisk gw is registered in cisco gk with e164=2. ooh323.conf is changed and another e164=3 is added to it. after running ooh323 reload command, ooh323 doesn't send request for new registration to gk. so gk doesn't know the new e164=3 and can not route calls with this number.
if i unload and load ooh323 module, it sends new registration request to gk and it works fine. but loading and unloading module, disconnect all current ooh323 calls and it's not good at all for me. any idea what should i do to apply my new configuration while i have active ooh323 calls? | ||
| Comments: | By: Matt Jordan (mjordan) 2013-11-02 12:16:27.505-0500 I'm going to go ahead and assign this to Alexander Anikin, as he's the primary module maintainer for {{chan_ooh323}}. That being said, the fact that {{chan_ooh323}} doesn't support a module reload operation - which not good - would still most likely be considered an improvement to {{chan_ooh323}}, and not a bug. As the module maintainer, it's up to Alexander if he'd like to keep this issue open and improve {{chan_ooh323}} with that capability. Alternatively, you or another developer could provide a patch for this feature. By: Alexander Anikin (may213) 2013-11-04 14:31:57.503-0600 Hello, ooh323 support reload on cli command 'ooh323 reload' not by 'module reload chan_ooh323.so'. I will produce patch here to support 'module reload' cmd also. Gatekeeper reregistration on reload is supported also beginning from 11 version, please use this version or newer. By: Alexander Anikin (may213) 2013-12-18 12:54:50.192-0600 Patch to implement module reload chan_ooh323.so command | ||