Implement module reload command for chan_ooh323

(close issue ASTERISK-22817)

Patches:
	ooh323_module_reload.patch



git-svn-id: https://origsvn.digium.com/svn/asterisk/trunk@404198 65c4cc65-6c06-0410-ace0-fbb531ad65f3